[gd_scene load_steps=4 format=3 uid="uid://ckiytt65f7a3j"]

[ext_resource type="PackedScene" uid="uid://d1mw6nt0p34d7" path="res://prefabs/counters/_base_counter.tscn" id="1_3p5de"]
[ext_resource type="Script" path="res://scripts/counters/container_counter.gd" id="1_6y48u"]
[ext_resource type="PackedScene" uid="uid://2ncg8b1e0ef7" path="res://prefabs_visuals/counters/container_counter_visuals.tscn" id="2_y68kl"]

[node name="ContainerCounter" instance=ExtResource("1_3p5de")]
script = ExtResource("1_6y48u")
scene = null

[node name="ContainerCounterVisuals" parent="." index="2" node_paths=PackedStringArray("counter") instance=ExtResource("2_y68kl")]
counter = NodePath("..")

[connection signal="player_grabbed_object" from="." to="ContainerCounterVisuals" method="play_open_anim"]
